# service--file-to-text

./: README.md  notes.txt  pyproject.toml  requirements-test.txt  start-local-server.sh
.github/actions/aws__deploy-lambda/: action.yml
.github/actions/aws__run-qa-tests/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_custom_open_sec_summit/fast_api/: Open_Sec_Summit__Fast_API.py
cbr_custom_open_sec_summit/fast_api/routes/: Routes__Info.py  Routes__Markitdown.py
cbr_custom_open_sec_summit/lambdas/: handler.py
cbr_custom_open_sec_summit/markitdown/: Markitdown_Service.py
cbr_custom_open_sec_summit/markitdown/routes/: Routes__Markitdown.py
cbr_custom_open_sec_summit/testing/: open_sec_summit__objs_for_tests.py
cbr_custom_open_sec_summit/utils/: Version.py
deploy/docker/cbr_custom/: Dockerfile  docker-compose.yml  start.sh
deploy/docker/cbr_xyz__from_pip/: Dockerfile  docker-compose.yml
deploy/docker/service/: Dockerfile  docker-compose.yml  start.sh
deploy/lambdas/: Deploy_Lambda__Cbr_Custom.py  Deploy_Lambda__Cbr_Xyz.py  test_Deploy_Lambda__Cbr_Custom.py
service_file_to_text/fast_api/: File_To_Text__Fast_API.py
service_file_to_text/fast_api/routes/: Routes__Info.py
service_file_to_text/lambdas/: handler.py
service_file_to_text/markitdown/: Markitdown_Service.py
service_file_to_text/markitdown/routes/: Routes__Markitdown.py
service_file_to_text/testing/: file_to_text__objs_for_tests.py
service_file_to_text/utils/: Version.py
tests/integration/lambda/: test__int__handler.py
tests/qa/: test__live_lambda_function.py
tests/unit/fast_api/: test_File_Data__Fast_API.py
(+6 files in other folders)
