[tool.poetry]
name        = "cbr_custom_open_sec_summit"
version     = "v0.7.0"
description = "CBR Custom - Open Security Summit"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-custom--open-sec-summit"
repository  = "https://github.com/the-cyber-boardroom/cbr-custom--open-sec-summit"

[tool.poetry.dependencies]
python           = "^3.11"
osbot-utils      = "*"
osbot-aws        = "*"
osbot-fast-api   = "*"
mangum           = "*"
httpx            = "*"
uvicorn          = "*"
bs4              = "*"
markitdown       = "*"
python-multipart = "*"
pytesseract      = "*"
pillow           = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
