[tool.poetry]
name        = "service_file_to_text"
version     = "v0.2.0"
description = "Service - File to Text"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/service--file-to-text"
repository  = "https://github.com/the-cyber-boardroom/service--file-to-text"

[tool.poetry.dependencies]
python           = "^3.11"
osbot-utils      = "*"
osbot-aws        = "*"
osbot-fast-api   = "*"
mangum           = "*"
httpx            = "*"
uvicorn          = "*"
bs4              = "*"
markitdown       = "*"
python-multipart = "*"
pytesseract      = "*"
pillow           = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
